# python-project-52

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  db.sqlite3  pyproject.toml
.github/workflows/: main.yml
env/: pyvenv.cfg
labels/: models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
labels/templates/labels/: create_label.html  delete_label.html  labels.html  update_label.html
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: create_status.html  delete_status.html  statuses.html  update_status.html
task_manager/: forms.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  tests.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/statuses/: forms.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_relatedmodel_task_alter_task_description_and_more.py  (+1 more)
task_manager/templates/: index.html
task_manager/users/: forms.py  models.py  tests.py  utils.py  views.py
tasks/: filters.py  models.py  tests.py  urls.py  utils.py  views.py
tasks/migrations/: 0001_initial.py
templates/: base.html  main.html
users/: admin.py  forms.py  tests.py  urls.py  views.py
users/fixtures/: invalid_data_for_forms.json  users.json  valid_data_for_forms.json
(+20 files in other folders)
